# ckanext-reportview

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/reportview/: cli.py  helpers.py  plugin.py  views.py
ckanext/reportview/assets/: script.js  webassets.yml
ckanext/reportview/i18n/: ckanext-reportview.pot
ckanext/reportview/i18n/th/LC_MESSAGES/: ckanext-reportview.mo  ckanext-reportview.po
ckanext/reportview/logic/: action.py  auth.py  schema.py  validators.py
ckanext/reportview/templates/: report_iframe.html
ckanext/reportview/templates/package/: resource_form.html
ckanext/reportview/templates/package/snippets/: additional_info.html  resource_form.html  resource_report_id.html
ckanext/reportview/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/reportview/tests/logic/: test_action.py  test_auth.py  test_validators.py
