[metadata]
name = ckanext-reportview
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pcbimon/ckanext-reportview
author = Patipat Chewprecha
author_email = patipat.che@mahidol.edu
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             reportview = ckanext.reportview.plugin:ReportviewPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/reportview/i18n/ckanext-reportview.pot
width = 80

[init_catalog]
domain = ckanext-reportview
input_file = ckanext/reportview/i18n/ckanext-reportview.pot
output_dir = ckanext/reportview/i18n

[update_catalog]
domain = ckanext-reportview
input_file = ckanext/reportview/i18n/ckanext-reportview.pot
output_dir = ckanext/reportview/i18n
previous = true

[compile_catalog]
domain = ckanext-reportview
directory = ckanext/reportview/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
